codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Ran 1 command
  └ first_token_is_long_eno…
