codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Ran 1 command
  └ echo one echo two
