codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Ran 1 command
  └ set -o pipefail cargo t…
