codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__patch_history_file_summary.snap
---
source: tui/src/history_cell/tests.rs
expression: display
---
• Edited src/example.rs (+1 -1)
